kubernetes/dev/platform/cloudflare-tunnel-ingress-controller/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: test.theblacklodge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiada
                port:
                  number: 8080
